# acme_pm_sdk

./: pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: publish_codeartifacts.sh
src/acme_pm_sdk/: __init__.py  auth.py  client.py  errors.py  pagination.py  transport.py
src/acme_pm_sdk/models/: project.py  task.py  user.py
src/acme_pm_sdk/services/: __init__.py  projects.py  tasks.py  users.py
tests/: test_transport.py
tests/services/: test_projects.py
