[project]
name = "acme-pm-sdk"
version = "0.1.0"
description = "Exploratory project built as an exercise with ChatGPT"
readme = "README.md"
authors = [
    { name = "John Griebel", email = "jkgriebel93@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
]

[project.urls]
Homepage = "https://www.example.com/project-homepage"
Repository = "https://www.github.com/jkgriebel93/acme-pm-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = [{ include = "acme_pm_sdk", from = "src" }]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "respx",
    "mypy",
    "types-requests",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]