[project]
name = "acme-pm-sdk"
version = "0.1.0"
description = "Exploratory project built as an exercise with ChatGPT"
readme = "README.md"
authors = [
    { name = "John Griebel", email = "jkgriebel93@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
]

[project.urls]
Homepage = "https://www.example.com/project-homepage"
Repository = "https://www.github.com/jkgriebel93/acme-pm-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = [{ include = "acme_pm_sdk", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "respx>=0.22.0",
    "ruff>=0.14.1",
    "types-requests>=2.32.4.20250913",
]
